[package]
name = "redlock"
version = "1.0.0"
authors = ["Jan-Erik Rediger <badboy@archlinux.us>", "cc <admin@splay.dev>"]

keywords = ["distributed", "locking"]
description = "Implementation of the distributed locking mechanism built on top of Redis, modified to use an r2d2 connection pool."

homepage = "https://github.com/badboy/redlock-rs"
repository = "https://github.com/badboy/redlock-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1"
r2d2 = "0.8"
redis = { version = "0.17", features = ["r2d2"] }
rand = "0.7"
tokio = { version = "0.2", features = ["time"] }
uuid = { version = "0.8", features = ["v4"] }
