[package]
name = "redlock"
version = "1.0.0"
authors = ["Jan-Erik Rediger <badboy@archlinux.us>", "cc <admin@splay.dev>"]

keywords = ["distributed", "locking"]
description = "Implementation of the distributed locking mechanism built on top of Redis, modified to use an r2d2 connection pool."

homepage = "https://github.com/badboy/redlock-rs"
repository = "https://github.com/badboy/redlock-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[dependencies]
bb8 = "0.4"
bb8-redis = "0.5"
rand = "0.7"
tokio = { version = "0.2", default-features = false, features = ["time"] }
uuid = { version = "0.8", features = ["v4"] }
